merged_repo.txt
chyba mam problem z odpaleniem tego skryptu
(.venv) PS C:\xau_rl> python -m manually
Traceback (most recent call last):
  File "<frozen runpy>", line 189, in _run_module_as_main
  File "<frozen runpy>", line 159, in _get_module_details
  File "<frozen importlib._bootstrap_external>", line 1160, in get_code
  File "<frozen importlib._bootstrap_external>", line 1090, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "C:\xau_rl\manually.py", line 9
    python -m ops.mini_update_ppo --timesteps 300000 --train_days 120 --val_days 30 --seed 42
              ^^^
SyntaxError: invalid syntax

a tutaj log z featch_features

2025-11-07T15:53:56.0985129+01:00] [fetch_features] start
[ M T 5 ]   C o m p a n y = M e t a Q u o t e s   L t d .   |   T e r m i n a l N a m e = M e t a T r a d e r   5   |   L o g i n = 6 2 7 1 9 0 2 5   |   S e r v e r = O A N D A T M S - M T 5   |   A c c o u n t N a m e = P L / M 6 2 7 1 9 0 2 5 / P L N 
 
 [ C F G ]   s y m b o l = G O L D . p r o   t f = M 5   k e e p _ d a y s = 7 2 0   u p d a t e _ d a y s = 6 0 
 
 S a v e d   b a r s :   d a t a / X A U U S D _ M 5 . c s v   ( 1 2 5 1 7 ) 
 
 S a v e d   t i c k s :   d a t a / X A U U S D _ t i c k s _ s a m p l e . c s v   ( 6 5 9 8 6 6 ) 
 
 C o s t   s u g g e s t i o n s   - >   r e p o r t s / c o s t s _ s u g g e s t i o n . y a m l 
 
 S a v e d   f e a t u r e s   - >   d a t a / X A U U S D _ M 5 _ f e a t u r e s . c s v   ( r o w s = 2 6 3 ,   c o l s = 7 9 ) 
 
 
[2025-11-07T15:54:09.8430797+01:00] [fetch_features] done

[2025-11-07T16:04:09.8545045+01:00] [fetch_features] start
[ M T 5 ]   C o m p a n y = M e t a Q u o t e s   L t d .   |   T e r m i n a l N a m e = M e t a T r a d e r   5   |   L o g i n = 6 2 7 1 9 0 2 5   |   S e r v e r = O A N D A T M S - M T 5   |   A c c o u n t N a m e = P L / M 6 2 7 1 9 0 2 5 / P L N 
 
 [ C F G ]   s y m b o l = G O L D . p r o   t f = M 5   k e e p _ d a y s = 7 2 0   u p d a t e _ d a y s = 6 0 
 
 S a v e d   b a r s :   d a t a / X A U U S D _ M 5 . c s v   ( 1 2 5 1 9 ) 
 
 S a v e d   t i c k s :   d a t a / X A U U S D _ t i c k s _ s a m p l e . c s v   ( 6 5 7 2 1 8 ) 
 
 C o s t   s u g g e s t i o n s   - >   r e p o r t s / c o s t s _ s u g g e s t i o n . y a m l 
 
 S a v e d   f e a t u r e s   - >   d a t a / X A U U S D _ M 5 _ f e a t u r e s . c s v   ( r o w s = 2 6 3 ,   c o l s = 7 9 ) 
 

